# GraphBaseTool

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.txt  requirements.txt  setup.py  vcpkg.json  Баранов-НИР-новый.txt
benchmarks/: CMakeLists.txt  boost_benchmark.cpp  custom_benchmark.py  igraph_benchmark.py  networkx_benchmark.py  performance_test.cpp  requirements.txt  run_all_benchmarks.bat  run_benchmark.bat  run_benchmarks.py
include/GraphBaseTool/: graph.hpp
src/: graph.cpp  graph.hpp
tests/: CMakeLists.txt  graph_test.cpp  main.cpp  performance_test.cpp  run_tests.ps1  test_framework.hpp
